# data

./: ApiMonitor.7z  JoinDomainToolforAny.ex  MyPinTool.cpp  Rubeus.7z  Rubeus_x64.7z  TestCall.7z  syscall_table_win11.csv  wenti.txt
files/: CMakeLists.txt  常用api.txt
files/Common/: ApiDatabase.cpp  ApiDatabase.h  ApiRecord.h  CMakeLists.txt  Config.cpp  Config.h
files/HookEngine/: CMakeLists.txt  HookEngine.cpp  HookEngine.h  dllmain.cpp
files/HookEngine/Filter/: CallFilter.cpp  CallFilter.h
files/HookEngine/Hooks/: AllHooks.cpp  AllHooks.h  AntiDebugHooks.cpp  AntiDebugHooks.h  CryptoHooks.cpp  CryptoHooks.h  FileHooks.cpp  FileHooks.h  InjectionHooks.cpp  InjectionHooks.h  MemoryHooks.cpp  MemoryHooks.h  NetworkHooks.cpp  NetworkHooks.h  ProcessHooks.cpp  ProcessHooks.h  RegistryHooks.cpp  RegistryHooks.h  SyncHooks.cpp  SyncHooks.h  SystemInfoHooks.cpp  SystemInfoHooks.h  ThreadHooks.cpp  ThreadHooks.h
files/HookEngine/IPC/: PipeServer.cpp  PipeServer.h
files/Injector/: Injector.cpp  Injector.h  main.cpp
sample/: sample.rar
蚂蚁工具/: qbot_decodestring_apiname.py
蟒蛇工具/: Vilsel.py  apiname.json  decode_drive_string - 副本.py  decode_gb2312.py  idapython使用笔记  ifsb_getconfig.py  qbot.py
